kubernetes/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: moviedb
  labels:
      app: moviedb
spec:
  replicas: 1
  selector:
    matchLabels:
      app: moviedb
  template:
    metadata:
      labels:
        app: moviedb
    spec:
      imagePullSecrets:
      - name: regcred
      containers:
      - name: moviedb
        image: gitlab.pd.o:4567/drule/moviedb:9
        ports:
        - name: http
          containerPort: 3000
