kubernetes/service.yml
kind: Service
apiVersion: v1
metadata:
  labels:
    app: moviedb
  name: moviedb
spec:
  type: NodePort
  selector:
    app: moviedb
  ports:
  - port: 3000
    targetPort: 3000
