kubernetes/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: moviedb
spec:
  backend:
    serviceName: moviedb
    servicePort: 3000
